--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <div class="min-h-screen bg-gray-50 flex items-center justify-center">
   <div class="text-center">
     <h1 class="text-4xl font-bold text-gray-900 mb-4">Recurring Task Manager</h1>
-    <p class="text-lg text-gray-600">Manage your recurring tasks with Sims-style status bars</p>
+    <p class="text-lg text-gray-600 mb-8">Manage your recurring tasks with Sims-style status bars</p>
+    <%= link_to "Create Task", new_task_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
   </div>
 </div>
