--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,9 @@
   <div class="text-center">
     <h1 class="text-4xl font-bold text-gray-900 mb-4">Recurring Task Manager</h1>
     <p class="text-lg text-gray-600 mb-8">Manage your recurring tasks with Sims-style status bars</p>
-    <%= link_to "Create Task", new_task_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+    <div class="space-x-4">
+      <%= link_to "View Tasks", tasks_path, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" %>
+      <%= link_to "Create Task", new_task_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+    </div>
   </div>
 </div>
