--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -29,7 +29,7 @@
                 <p class="text-gray-500 text-sm">Created: <%= task.created_at.strftime("%B %d, %Y") %></p>
               </div>
               <div class="ml-4">
-                <%= link_to "Complete", complete_task_path(task), data: { method: :patch },
+                <%= link_to "Complete", complete_task_path(task), method: :patch,
                     class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" %>
               </div>
             </div>
