Gemini - task bar status

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -25,7 +25,7 @@
               <div class="flex-1">
                 <h3 class="text-lg font-semibold text-gray-900"><%= task.name %></h3>
                 <p class="text-gray-600">Interval: <%= task.interval_display %></p>
-                        <div class="status-bar w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
+                        <div class="status-bar w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700" data-status-color="<%= task.status_color %>">
           <div class="#{task.status_color} h-2.5 rounded-full" style="width: #{task.completion_percentage}%"></div>
         </div>
         <span class="text-sm text-gray-500"><%= task.status_text %></span>
